--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
-        "maatwebsite/excel": "^1.1",
+        "maatwebsite/excel": "^3",
+        "psr/simple-cache": "3.0",
         "spatie/laravel-permission": "^5.6",
         "symfony/process": "^6.1"
     },
